--- a/style.css
+++ b/style.css
@@ -51,3 +51,51 @@ body {
     transform: rotate(-90deg);
     font-weight: 800;
 }
+
+#main {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
+
+#bg-img {
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+}
+
+.white-heading {
+    color: white;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+#case-study {
+    position: absolute;
+    top: 10%;
+    left: 14%;
+}
+
+#classic {
+    position: absolute;
+    top: 10%;
+}
+
+#project-details {
+    position: absolute;
+    top: 11%;
+    right: 14%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#details {
+    color: #BFBABA;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 30%;
+}
