--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Open San', sans-serif;
 }
 
 body {
@@ -28,6 +29,10 @@ body {
     justify-content: space-between;
 }
 
+#line1 {
+    margin: 100px   ;
+}
+
 #social {
     display: flex;
     flex-direction: column;
@@ -42,14 +47,15 @@ body {
 }
 
 #double-lines .line {
-    width: 50%;
+    width: 45%;
     background-color: black;
-    border: 2px solid;
+    border: 3px solid;
 }
 
 .transform-title {
     transform: rotate(-90deg);
-    font-weight: 800;
+    font-weight: bolder;
+    font-family: sans-serif;
 }
 
 #main {
@@ -71,10 +77,54 @@ body {
     font-size: 1.5rem;
 }
 
+#big-title {
+    position: absolute;
+    height: 50%;
+    bottom: 20%;
+    left: 12%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+#current-page {
+    color: white;
+    font-size: 150%;
+    font-weight: bold;
+}
+
+strong {
+    color: black;
+    font-weight: bold;
+}
+
+.transition {
+    color: white;
+    font-size: 150%;
+    font-weight: bold;
+}
+
+#next-page {
+    color: black;
+}
+
+.white-name {
+    color: white;
+    font-size: 4rem;
+    font-weight: bolder;
+}
+
 #case-study {
     position: absolute;
     top: 10%;
     left: 14%;
+}
+
+#more-case {
+    font-weight: bolder;
+    color: white;
+    font-size: 150%;
 }
 
 #classic {
@@ -92,10 +142,40 @@ body {
     justify-content: space-between;
 }
 
+#detail-sep {
+    border: 1px solid gray;
+    width: 50%;
+}
+
 #details {
     color: #BFBABA;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    height: 40%;
+    font-weight: bold;
+    font-size: 130%;
+}
+
+#main .line {
+    background-color: white;
+    width: 45%;
+    height: 2px;
+    position: absolute;
+    top: 11%;
+    left: 25%;
+}
+
+#showcase-img {
+    position: absolute;
     height: 30%;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    right: 2%;
+    bottom: 5%;
+}
+
+#showcase-img > img {
+    height: 100%;
 }
