--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 #nav {
+    width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,15 +48,24 @@ body {
 }
 
 #double-lines .line {
-    width: 45%;
+    width: 69px;
     background-color: black;
-    border: 3px solid;
+    border: 4px solid;
+}
+
+.line2 {
+    margin-top: 7.5px;
 }
 
 .transform-title {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 1000;
+    font-size: 30px;
+    line-height: 41px;
+    margin-top: 35px;
+    color: black;
     transform: rotate(-90deg);
-    font-weight: bolder;
-    font-family: sans-serif;
 }
 
 #main {
